<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.example.studentmanagement.viewmodel.AddStudentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".fragment.AddStudentFragment">

            <TextView
                android:id="@+id/title"
                style="@style/TextAppearance.Material3.LabelLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:text="@string/add_student_fragment"
                android:textSize="@dimen/font_size"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/pickAvatar"
                android:layout_width="@dimen/avatar_dimen"
                android:layout_height="@dimen/avatar_dimen"
                android:layout_marginEnd="16dp"
                android:importantForAccessibility="no"
                android:scaleType="fitXY"
                app:imageUri="@{viewModel.uri}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/text_input_layout_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_name"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:layout_marginEnd="8dp"
                android:hint="@string/enter_name"
                app:layout_constraintEnd_toStartOf="@id/pickAvatar"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:text="@={viewModel.fullName}" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_nickname"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:hint="@string/enter_nickname"
                app:layout_constraintEnd_toEndOf="@id/text_input_layout_name"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_name"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text_nickname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:text="@={viewModel.nickName}" />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:id="@+id/group_birthday_age"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:orientation="horizontal"
                android:weightSum="6"
                app:layout_constraintEnd_toEndOf="@id/text_input_layout_name"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_name"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_nickname">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_layout_birthday"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:hint="@string/birthday_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/text_input_edit_text_birthday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:inputType="date"
                        android:text="@{viewModel.birthday}" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/age"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@{viewModel.age != null ? @string/age(viewModel.age) : `Age:`}"
                    android:textSize="@dimen/font_size" />

            </LinearLayout>

            <RadioGroup
                android:id="@+id/gender_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:checkedButton="@{viewModel.checked}"
                android:onCheckedChanged="@{viewModel.setGender}"
                app:layout_constraintStart_toStartOf="@id/group_birthday_age"
                app:layout_constraintTop_toBottomOf="@id/group_birthday_age">

                <RadioButton
                    android:id="@+id/gender_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/male" />

                <RadioButton
                    android:id="@+id/gender_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/female" />
            </RadioGroup>

            <LinearLayout
                android:id="@+id/group_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_elements"
                android:weightSum="4"
                app:layout_constraintEnd_toEndOf="@id/pickAvatar"
                app:layout_constraintStart_toStartOf="@id/gender_group"
                app:layout_constraintTop_toBottomOf="@id/gender_group">

                <Button
                    android:id="@+id/button_cancel"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/cancel"
                    android:textSize="@dimen/font_size" />

                <Space
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <Button
                    android:id="@+id/button_confirm"
                    style="@style/Widget.Material3.Button"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.5"
                    android:text="@string/confirm"
                    android:textSize="@dimen/font_size" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>